# MazeWalker

./: .gitignore  README.md
MazeTracer/: CMakeLists.txt  MazeTracer.sln  MazeTracer.vcxproj  MazeTracer.vcxproj.filters  PropertySheet.props  TestApp.vcxproj  TestApp.vcxproj.filters
MazeTracer/PyScripts/: config.py  post_NtQueryInformationProcess.py  post__snprintf.py  post_antivm1.py  post_createprocessa.py  post_regopenkeyexa.py  post_regopenkeyexw.py  post_wsprintfa.py  pre_copyfilea.py  pre_copyfilew.py  pre_createdirectorya.py  pre_createdirectoryw.py  pre_createfilea.py  pre_createfilew.py  pre_createmutexa.py  pre_createmutexw.py  pre_createremotethread.py  pre_createthread.py  pre_deletefilea.py  pre_deletefilew.py  pre_findwindowa.py  pre_findwindoww.py  pre_getfilesize.py  pre_httpopenrequestsa.py  pre_httpopenrequestsw.py  pre_internetconnecta.py  pre_internetconnectw.py  pre_lcreat.py  pre_lopen.py  pre_lstrcmpa.py  pre_lstrcmpw.py  pre_lstrlena.py  pre_lstrlenw.py  pre_movefilea.py  pre_movefilew.py  pre_ntsetthreadcontext.py  pre_ntwritevirtualmemory.py  pre_openfilemappinga.py  pre_openfilemappingw.py  pre_openprocess.py  (+15 more)
MazeTracer/cmake/: IntelPIN.cmake
MazeTracer/src/: BBL.cpp  BBL.h  Blob.cpp  Blob.h  Call.cpp  Call.h  ContextAnalyzer.cpp  ContextAnalyzer.h  IAddress.h  IMemoryAreaMaker.h  IReportObject.h  Image.h  Logger.cpp  Logger.h  MemoryArea.cpp  MemoryArea.h  MemoryAreaMaker.h  MemoryTracer.cpp  MemoryTracer.h  PEImage.cpp  PEImage.h  ProcessTrace.cpp  ProcessTrace.h  PythonAnalysis.cpp  PythonAnalysis.h  PythonInternal.cpp  PythonInternal.h  (+28 more)
(+43 files in other folders)
